dataset1235/2025-2/1153765216/users/3635356750/executions/2747719322_775838323.log
== SUBMISSION (2025-08-26 01:31:20)
-- CODE: 
n1=1
n2=2
n3=3
m=(ni+n2+n3)/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m=(ni+n2+n3)/3
       ^^
NameError: name 'ni' is not defined. Did you mean: 'n1'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m=(ni+n2+n3)/3
       ^^
NameError: name 'ni' is not defined. Did you mean: 'n1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:58:29)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2+n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:15:54)
-- CODE: 
n1=1
n2=2
n3=3
m=(ni+n2+n3)/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m=(ni+n2+n3)/3
       ^^
NameError: name 'ni' is not defined. Did you mean: 'n1'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m=(ni+n2+n3)/3
       ^^
NameError: name 'ni' is not defined. Did you mean: 'n1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:58:10)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2+n3)/3
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:32:38)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2+n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:31:35)
-- CODE: 
n1=1
n2=2
n3=3
m=(n1+n2+n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
